# krabby

./: .gitignore  Cargo.toml  askama.toml  compose.yml  input.css  justfile  tailwind.config.js
assets/: style.css
migrations/: 20240227122554_user.sql  20240302181834_post.sql
src/: errors.rs  lib.rs  main.rs
src/components/: base.rs  mod.rs
src/database/: mod.rs  post.rs  user.rs
src/routes/: auth.rs  index.rs  login.rs  middleware.rs  mod.rs  not_found.rs  settings.rs  signup.rs  users.rs
src/routes/api/: mod.rs  post.rs
src/routes/api/auth/: cloudflare.rs  login.rs  logout.rs  middleware.rs  mod.rs  signup.rs
src/routes/api/auth/oauth/: discord.rs  github.rs  mod.rs
src/routes/api/update/: mod.rs
templates/: base.html  base_nav_footer.html  footer.html  hamburger.html  index.html  navbar.html
templates/components/: field.html  footer.html  form.html  navbar.html  oauth.html  turnstitle.html
templates/routes/: 404.html  auth.html  index.html  login.html  post.html  profile.html  settings.html  signup.html
