[package]
name = "krabby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
chrono = "0.4.31"
deadpool-redis = { version = "0.14.0", features = ["serde"] }
dotenvy = "0.15.7"
oauth2 = "4.4.2"
pwhash = "1.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "time"] }
thiserror = "1.0.56"
time = "0.3.34"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["tokio"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.6.1"
